--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,23 +1,26 @@
 # Use a imagem oficial do Python como base
-FROM ubuntu:22.04
 FROM python:3.11-slim
 
 # Defina o diretório de trabalho na imagem
 WORKDIR /app
 
 # Copie os arquivos de requisitos para a imagem
-COPY requirements.txt .
+COPY app/requirements.txt .
 
-# Instale as dependências
-RUN apt-get update
-RUN apt-get install net-tools -y
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+# Atualize os pacotes e instale dependências
+RUN apt-get update && apt-get install -y net-tools \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Atualize o pip e instale as dependências do Python
+RUN pip install --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
 
 # Copie o restante dos arquivos da aplicação para a imagem
 COPY . /app
 
-# Exponha a porta que a aplicação usará
+# Exponha a porta usada pela aplicação
 EXPOSE 8000
-# uvicorn app:app --host "localhost" --port 8000 --reload
-CMD ["uvicorn", "app:app", "--host", "localhost", "--port", "8000", "--reload"]
+
+# Comando para iniciar o servidor
+CMD ["fastapi", "run", "app/app.py", "--host", "0.0.0.0", "--port", "8000"]
