--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,21 @@
 version: "3.9"
 
 services:
+
+  db:
+    image: postgres:15
+    container_name: postgres_db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-seuUsuario}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-suaSenha}
+      POSTGRES_DB: ${POSTGRES_DB:-seuBanco}
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+
+
   app:
     image: raphaba9/restfulapi-app
     container_name: python_app
@@ -10,18 +25,3 @@ services:
       - ./app/.env
     depends_on:
       - db
-
-  db:
-    image: postgres:15
-    container_name: postgres_db
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: cloud
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
-volumes:
-  db_data:
