--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,15 @@
-version: "3.9"
-
 services:
+  app:
+    image: raphaba9/restfulapi-app
+    container_name: python_app
+    ports:
+      - "8000:8000"
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-suaSenha}@db:5432/${POSTGRES_DB:-suaBase}
+      SECRET_KEY: "${SECRET_KEY:-superChaveSecretaUau}"
+    depends_on:
+      - db
+    restart: always
 
   db:
     image: postgres:15
@@ -8,20 +17,11 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-seuUsuario}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-suaSenha}
-      POSTGRES_DB: ${POSTGRES_DB:-seuBanco}
+      POSTGRES_USER: ${POSTGRES_USER:-projeto}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-projeto}
+      POSTGRES_DB: ${POSTGRES_DB:-projeto}
     volumes:
       - db_data:/var/lib/postgresql/data
 
-
-
-  app:
-    image: raphaba9/restfulapi-app
-    container_name: python_app
-    ports:
-      - "8000:8000"
-    env_file:
-      - ./app/.env
-    depends_on:
-      - db
+volumes:
+  db_data:
