--- a/compose.yml
+++ b/compose.yml
@@ -1,23 +1,31 @@
 services:
-  app:
-    image: raphaba9/restfulapi-app:v2
-    container_name: python_app
-    ports:
-      - "8000:8000"
-    environment:
-      SQLALCHEMY_DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      SECRET_KEY: "${SECRET_KEY:-superChaveSecretaUau}"
-    depends_on:
-      - db
-    restart: always
-
   db:
     image: postgres:15
     container_name: postgres_db
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5433:5432"
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-seuUsuario}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-suaSenha}
-      POSTGRES_DB: ${POSTGRES_DB:-suaBase}
+      POSTGRES_USER: ${POSTGRES_USER:-projeto}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-projeto}
+      POSTGRES_DB: ${POSTGRES_DB:-projeto}
+    networks:
+      - restfulapi-network
 
+  app:
+    image: raphaba9/restfulapi-app:latest
+    container_name: python_app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      SQLALCHEMY_DATABASE_URL: postgresql://${POSTGRES_USER:-projeto}:${POSTGRES_PASSWORD:-projeto}@db:5432/${POSTGRES_DB:-projeto}
+      SECRET_KEY: "${SECRET_KEY:-superChaveSecretaUau}"
+      ALGORITHM: "HS256"
+    restart: always
+    networks:
+      - restfulapi-network
+
+
+networks:
+  restfulapi-network:
