--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: python_app
     ports:
       - "8000:8000"
-    env_file:
-      - ./app/.env
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_USER:-projeto}:${POSTGRES_PASSWORD:-projeto}@db:5432/${POSTGRES_DB:-projeto}
     depends_on:
       - db
 
@@ -17,9 +17,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: cloud
+      POSTGRES_USER: ${POSTGRES_USER:-projeto}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-projeto}
+      POSTGRES_DB: ${POSTGRES_DB:-projeto}
     volumes:
       - db_data:/var/lib/postgresql/data
 
