--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -23,4 +23,4 @@ COPY . /app
 EXPOSE 8000
 
 # Comando para iniciar o servidor
-CMD ["fastapi", "run", "app/app.py", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["fastapi", "run", "app.py", "--host", "0.0.0.0", "--port", "8000"]
