--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,7 @@ services:
       - restfulapi-network
 
   app:
-    image: raphaba9/restfulapi-app:latest
+    image: raphaba9/restfulapi-app:webdeploy
     container_name: python_app
     ports:
       - "8000:8000"
